# ModelChecker

./: .gitmodules  CheckDir.hs  IC3.hs  IC3_NoDebug.hs  Main.hs  Makefile  ModelChecker.cabal  README.md  Setup.hs  cnfTest  propagate_benchmark_results.csv
Benchmark/: Benchmark.hs
Minisat/: CSolver.cpp  CSolver.h  CSolver_hsc.h  Minisat.hs  Minisat.hsc
Model/: Model.hi  Model.hs
Parser/: AigModel.hs  AigerParser.hs  AigerTools.hs  AigerTools.hsc
Test/: IC3Tester.hs  MinisatTester.hs  Tests.hs
Tests/: IC3Tester.hs  MinisatTester.hs  ParseTester.hs
blifs/: counters2.blif  counters2_neg.blif  counters3.blif  counters3_neg.blif  counters4.blif  simple_counters.blif  simpler_counters.blif
examples/: counters2.aig  counters3.aig  counters3_neg.aig  counters4.aig  simple1.aag  simple2.aag  simple3.aag  simple4.aag  simple6.aag  simple_counters.aig
simple/: counters2_neg.aig  simple5.aag  simple7.aag  simpler_counters.aig
writeup/: basic.csv  basic_benchmark_results.csv  betterCTI.csv  betterPropagation.csv  ctg.csv  cti_benchmark_results.csv  dissertation.tex  priorityQueue.csv  propagate_benchmark_results.csv  proposal.tex  proposal_noheader.tex  refs.bib
