name: ModelChecker
version: 0.1.0.0
build-type: Custom
cabal-version: >=1.22

library
  exposed-modules: Minisat.Minisat, Model.Model, Parser.AigerParser, Parser.AigerTools, Parser.AigModel
  other-extensions: ForeignFunctionInterface
  build-depends: base >=4.6 && <4.8, split >=0.2 && <0.3, bytestring >=0.10 && <0.11, directory >=1.2 && <1.3
  build-tools: hsc2hs
  default-language: Haskell2010
  includes: Parser/aiger/aiger.h
  c-sources: Parser/aiger/aiger.c
  include-dirs: ./Minisat, ./Test, ./Parser
  extra-libraries: stdc++

executable parseTest
  main-is: Test/ParseTester.hs
  other-modules: Parser.AigerParser, Parser.AigerTools, Parser.AigModel
  build-depends: base, split, bytestring, directory
  default-language: Haskell2010
  includes: Parser/aiger/aiger.h
  c-sources: Parser/aiger/aiger.c

executable minisatTest
  main-is: Test/MinisatTester.hs
  other-modules: Minisat.Minisat, Model.Model
  build-depends: base
  default-language: Haskell2010
  c-sources: Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++

executable ic3Test
  main-is: Test/IC3Tester.hs
  build-depends: base, split, bytestring, directory
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++

Test-Suite tests
  type: detailed-0.9
  test-module: Test.Tests
  other-modules: Parser.AigerParser
               , Parser.AigModel
               , Model.Model
               , Minisat.Minisat
               , IC3
  build-depends: base
               , split
               , bytestring
               , directory
               , Cabal
               , HUnit
               , cabal-test-hunit
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++
