name: ModelChecker
version: 0.1.0.0
build-type: Custom
cabal-version: >=1.22

library
  exposed-modules: Minisat.Minisat, Model.Model, Parser.AigerParser, Parser.AigerTools, Parser.AigModel, IC3
  other-extensions: ForeignFunctionInterface
  build-depends: base >=4.6 && <4.8, split >=0.2 && <0.3, bytestring >=0.10 && <0.11, directory >=1.2 && <1.3,
                 pqueue >= 1.3.1
  build-tools: hsc2hs
  default-language: Haskell2010
  includes: Parser/aiger/aiger.h
  c-sources: Parser/aiger/aiger.c
  include-dirs: ./Minisat, ./Test, ./Parser
  extra-libraries: stdc++
  ghc-options: -rtsopts -with-rtsopts=-p
  ghc-prof-options: -fprof-auto-top

executable checkDir
  main-is: CheckDir.hs
  build-depends: base, split, bytestring, directory, pqueue
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++
  ghc-options: -rtsopts "-with-rtsopts=-p" -auto-all -caf-all

executable check
  main-is: Main.hs
  build-depends: base, split, bytestring, directory, pqueue
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++
  ghc-options: -rtsopts "-with-rtsopts=-p" -auto-all -caf-all

Test-Suite tests
  type: detailed-0.9
  test-module: Test.Tests
  other-modules: Parser.AigerParser
               , Parser.AigerTools
               , Parser.AigModel
               , Model.Model
               , Minisat.Minisat
               , IC3
  build-depends: base
               , split
               , bytestring
               , directory
               , Cabal
               , HUnit
               , cabal-test-hunit
               , pqueue
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++

Benchmark benchmarks
  type: exitcode-stdio-1.0
  build-depends: base
               , split
               , bytestring
               , directory
               , criterion
               , pqueue
  default-language: Haskell2010
  c-sources: Parser/aiger/aiger.c,
    Minisat/CSolver.cpp,
    Minisat/minisat/minisat/core/Solver.cc,
    Minisat/minisat/minisat/simp/SimpSolver.cc,
    Minisat/minisat/minisat/utils/System.cc,
    Minisat/minisat/minisat/utils/Options.cc
  extra-libraries: stdc++
  main-is: Benchmark/Benchmark.hs
  ghc-options: -fno-full-laziness
